# glia

./: .gitignore  Dockerfile  Hackathon.md  LICENSE  README.md  README_ES.md  glia.env.example  pyproject.toml
.github/workflows/: publish.yml
benchmark_project/: knowledge.json
benchmark_project/docs/: deployment.md
benchmark_project/docs/decisions/: adr-001-jwt-rs256.md  adr-002-event-driven.md
benchmark_project/src/config/: settings.py
benchmark_project/src/database/: connection.py
benchmark_project/src/middleware/: cors.py  rate_limiter.py
benchmark_project/src/models/: order.py
benchmark_project/src/services/: inventory_service.py  notification_service.py  order_service.py
benchmark_project/src/utils/: crypto.py  validators.py
benchmark_project/tests/: test_auth.py
benchmark_project_2/docs/: runbook.md
benchmark_project_2/docs/decisions/: adr-001-xgboost-over-neural.md
benchmark_project_2/src/config/: infra_config.py  model_config.py
benchmark_project_2/src/data/: cleaning.py  feature_engineering.py
benchmark_project_2/src/models/: evaluation.py
benchmark_project_2/src/utils/: data_contracts.py  feature_store.py
benchmark_project_2/tests/: test_features.py  test_pipeline.py
benchmark_project_3/: knowledge.json
benchmark_project_3/docs/decisions/: adr-001-redux-over-context.md
benchmark_project_3/docs/incidents/: 2024-04-infinite-refresh.md
benchmark_project_3/src/api/: auth.ts
benchmark_project_3/src/config/: routes.ts
benchmark_project_3/src/hooks/: useWebSocket.ts
benchmark_project_3/src/store/: index.ts  ordersSlice.ts
benchmarks/: benchmark_vs_graph.py  benchmark_vs_rag.py  run_benchmark.py  run_benchmark_v2.py
benchmarks/projects/ml_pipeline/: knowledge.json
benchmarks/results/: benchmark_frontend.md  benchmark_ml_pipeline.md
docs/: ARCHITECTURE.md  devto_post.md
docs/benchmarks/: BENCHMARK_SUMMARY.md  benchmark_ecommerce.md
example_project/: teach_glia.py
example_project/src/: app.py  auth.py  database.py  models.py
hackathon/: .env.example  .gitignore  ABOUT.md  PITCH.md  README.md  main.py  mcp_config.json  openapi.yaml  rapid_agent.py  requirements.txt
hackathon/services/: payments.js
src/glia/: __init__.py  __main__.py  ast_scanner.py  ast_scanner_v2.py  binding.py  brain.py  cli.py  cognitive_map.py  config.py  distiller.py  embeddings.py  encoder.py  graph.py  mcp_server.py  plasticity.py  resonance.py  scanner.py  storage.py  substrate.py  synonyms.py  threads.py  watcher.py
src/glia/hooks/: post-commit
tests/: test_watcher.py
(+55 files in other folders)
