[project]
name = "glia-memory"
version = "0.2.0"
description = "Holographic Distributed Memory for AI agents. Persistent context across sessions via pattern resonance."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Felipe Farías Alfaro"}
]
keywords = ["memory", "ai", "agents", "holographic", "mcp", "context", "llm", "vector-symbolic"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "click>=8.1",
    "numpy>=1.24",
    "google-genai>=1.0",
    "python-dotenv>=1.0",
    "mcp>=1.0",
    "watchdog>=3.0.0",
]

[project.optional-dependencies]
openai = ["openai>=1.0"]
anthropic = ["anthropic>=0.30"]
all = ["openai>=1.0", "anthropic>=0.30"]

[project.urls]
Homepage = "https://github.com/FelipeFariasAlfaro/glia"
Repository = "https://github.com/FelipeFariasAlfaro/glia"
Issues = "https://github.com/FelipeFariasAlfaro/glia/issues"

[project.scripts]
glia = "glia.cli:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
